--- a/assets/css/ie8.css
+++ b/assets/css/ie8.css
@@ -1,8 +1,16 @@
 /*
-	Multiverse by HTML5 UP
+	Phantom by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
+
+/* Form */
+
+	form .field {
+		float: none !important;
+		width: 100% !important;
+		padding-left: 0 !important;
+	}
 
 /* Button */
 
@@ -11,37 +19,55 @@
 	input[type="button"],
 	button,
 	.button {
-		border: solid 2px #36383c;
+		border: solid 2px #585858 !important;
 	}
+
+		input[type="submit"]:hover,
+		input[type="reset"]:hover,
+		input[type="button"]:hover,
+		button:hover,
+		.button:hover {
+			border-color: #f2849e !important;
+		}
 
 		input[type="submit"].special,
 		input[type="reset"].special,
 		input[type="button"].special,
 		button.special,
 		.button.special {
-			border: 0;
+			border: none !important;
 		}
 
-/* Panel */
+/* Tiles */
 
-	.panel {
-		background: #242629;
+	.tiles article > .image:before, .tiles article > .image:after {
 		display: none;
 	}
 
-		.panel.active {
-			display: block;
-		}
+/* Header */
 
-		.panel > .closer:before {
-			content: '\00d7';
-			font-size: 42px;
-		}
-
-/* Main */
-
-	#main .thumb > h2 {
-		text-align: center;
-		width: 100%;
-		left: 0;
+	#header .logo .symbol {
+		display: none;
 	}
+
+	#header nav ul li a[href="#menu"] {
+		text-indent: 0;
+		width: auto;
+		font-size: 0.8em;
+	}
+
+		#header nav ul li a[href="#menu"]:before, #header nav ul li a[href="#menu"]:after {
+			display: none;
+		}
+
+/* Footer */
+
+	#footer > .inner section {
+		width: 50%;
+		margin-left: 3em;
+	}
+
+		#footer > .inner section:first-child {
+			margin-left: 0;
+			width: 40%;
+		}
