--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -1,5 +1,5 @@
 ///
-/// Multiverse by HTML5 UP
+/// Phantom by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -9,24 +9,27 @@
 	body, input, select, textarea {
 		color: _palette(fg);
 		font-family: _font(family);
-		font-size: 15pt;
+		font-size: 16pt;
 		font-weight: _font(weight);
-		letter-spacing: _font(kerning);
-		line-height: 1.65;
+		line-height: 1.75;
 
 		@include breakpoint(xlarge) {
-			font-size: 11pt;
+			font-size: 14pt;
+		}
+
+		@include breakpoint(large) {
+			font-size: 12pt;
 		}
 	}
 
 	a {
 		@include vendor('transition', (
-			'color #{_duration(transition)} ease-in-out',
-			'border-bottom-color #{_duration(transition)} ease-in-out'
+			'border-bottom-color #{_duration(transition)} ease',
+			'color #{_duration(transition)} ease'
 		));
-		border-bottom: dotted 1px;
-		color: _palette(accent1);
 		text-decoration: none;
+		color: _palette(fg);
+		border-bottom: dotted 1px transparentize(_palette(fg), 0.5);
 
 		&:hover {
 			border-bottom-color: transparent;
@@ -47,42 +50,67 @@
 		margin: 0 0 _size(element-margin) 0;
 	}
 
-	h1, h2, h3, h4, h5, h6 {
+	h1 {
+		font-size: 2.75em;
 		color: _palette(fg-bold);
-		font-weight: _font(weight-bold);
-		letter-spacing: _font(kerning-alt);
-		line-height: 1.5;
+		font-weight: _font(weight-bold-alt);
+		line-height: 1.3;
 		margin: 0 0 (_size(element-margin) * 0.5) 0;
-		text-transform: uppercase;
+		letter-spacing: _font(letter-spacing-alt);
 
 		a {
 			color: inherit;
-			text-decoration: none;
+		}
+
+		@include breakpoint(small) {
+			font-size: 2em;
+			margin: 0 0 (_size(element-margin) * 0.5) 0;
+		}
+
+		@include breakpoint(xxsmall) {
+			font-size: 1.75em;
 		}
 	}
 
-	h1 {
-		font-size: 2em;
+	h2, h3, h4, h5, h6 {
+		color: _palette(fg-bold);
+		font-weight: _font(weight-bold);
+		line-height: 1.5;
+		margin: 0 0 (_size(element-margin) * 1) 0;
+		text-transform: uppercase;
+		letter-spacing: _font(letter-spacing);
+
+		a {
+			color: inherit;
+		}
 	}
 
 	h2 {
-		font-size: 1.25em;
-	}
-
-	h3 {
 		font-size: 1.1em;
 	}
 
-	h4 {
+	h3 {
 		font-size: 1em;
 	}
 
+	h4 {
+		font-size: 0.8em;
+	}
+
 	h5 {
-		font-size: 0.9em;
+		font-size: 0.8em;
 	}
 
 	h6 {
-		font-size: 0.7em;
+		font-size: 0.8em;
+	}
+
+	@include breakpoint(medium) {
+		h1, h2, h3, h4, h5, h6 {
+			br {
+				display: none;
+			}
+		}
 	}
 
 	@include breakpoint(small) {
@@ -91,19 +119,7 @@
 		}
 
 		h3 {
-			font-size: 0.9em;
-		}
-
-		h4 {
 			font-size: 0.8em;
-		}
-
-		h5 {
-			font-size: 0.7em;
-		}
-
-		h6 {
-			font-size: 0.7em;
 		}
 	}
 
@@ -120,7 +136,7 @@
 	}
 
 	blockquote {
-		border-left: 4px _palette(border);
+		border-left: solid (_size(border-width) * 4) _palette(border);
 		font-style: italic;
 		margin: 0 0 _size(element-margin) 0;
 		padding: (_size(element-margin) / 4) 0 (_size(element-margin) / 4) _size(element-margin);
@@ -128,7 +144,8 @@
 
 	code {
 		background: _palette(border-bg);
-		border: solid 1px _palette(border);
+		border-radius: _size(border-radius);
+		border: solid _size(border-width) _palette(border);
 		font-family: _font(family-fixed);
 		font-size: 0.9em;
 		margin: 0 0.25em;
@@ -151,7 +168,7 @@
 
 	hr {
 		border: 0;
-		border-bottom: solid 1px _palette(border);
+		border-bottom: solid _size(border-width) _palette(border);
 		margin: _size(element-margin) 0;
 
 		&.major {
