--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -1,5 +1,5 @@
 ///
-/// Multiverse by HTML5 UP
+/// Phantom by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -14,40 +14,30 @@
 		@include vendor('appearance', 'none');
 		@include vendor('transition', (
 			'background-color #{_duration(transition)} ease-in-out',
-			'box-shadow #{_duration(transition)} ease-in-out',
-			'color #{_duration(transition)} ease-in-out'
+			'color #{_duration(transition)} ease-in-out',
+			'box-shadow #{_duration(transition)} ease-in-out'
 		));
 		background-color: transparent;
+		border-radius: _size(border-radius);
 		border: 0;
-		border-radius: 0;
-		box-shadow: inset 0 0 0 2px _palette(border);
-		color: _palette(fg-bold) !important;
+		box-shadow: inset 0 0 0 (_size(border-width) * 2) _palette(fg);
+		color: _palette(fg) !important;
 		cursor: pointer;
 		display: inline-block;
-		font-size: 0.9em;
+		font-size: 0.8em;
 		font-weight: _font(weight-bold);
-		height: _size(element-height) * (1 / 0.9);
-		letter-spacing: _font(kerning-alt);
-		line-height: _size(element-height) * (1 / 0.9);
-		padding: 0 2.5em;
+		height: 3.5em;
+		letter-spacing: _font(letter-spacing);
+		line-height: 3.45em;
+		overflow: hidden;
+		padding: 0 1.25em 0 #{1.25em + _font(letter-spacing)};
 		text-align: center;
 		text-decoration: none;
+		text-overflow: ellipsis;
 		text-transform: uppercase;
 		white-space: nowrap;
 
-		&:hover {
-			box-shadow: inset 0 0 0 2px _palette(accent1);
-			color: _palette(accent1) !important;
-
-			&:active {
-				background-color: transparentize(_palette(accent1), 0.85);
-				color: _palette(accent1) !important;
-			}
-		}
-
 		&.icon {
-			padding-left: 1.35em;
-
 			&:before {
 				margin-right: 0.5em;
 			}
@@ -59,31 +49,40 @@
 			width: 100%;
 		}
 
+		&:hover {
+			color: _palette(accent1) !important;
+			box-shadow: inset 0 0 0 (_size(border-width) * 2) _palette(accent1);
+		}
+
+		&:active {
+			background-color: transparentize(_palette(accent1), 0.9);
+		}
+
 		&.small {
-			font-size: 0.8em;
+			font-size: 0.6em;
 		}
 
 		&.big {
-			font-size: 1.35em;
+			font-size: 1em;
 		}
 
 		&.special {
-			background-color: _palette(accent1);
 			box-shadow: none;
+			background-color: _palette(fg);
+			color: _palette(bg) !important;
 
 			&:hover {
-				background-color: lighten(_palette(accent1), 10);
-				color: _palette(fg-bold) !important;
+				background-color: _palette(accent1);
+			}
 
-				&:active {
-					background-color: darken(_palette(accent1), 10);
-				}
+			&:active {
+				background-color: darken(_palette(accent1), 8);
 			}
 		}
 
 		&.disabled,
 		&:disabled {
 			@include vendor('pointer-events', 'none');
-			opacity: 0.35;
+			opacity: 0.25;
 		}
 	}
